--- a/index.html
+++ b/index.html
@@ -1,1 +1,123 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Portfolio</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
+<body>
+
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <h1>Roy Davis</h1>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="#about">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="#">Portfolio</a>
+                    <a class="nav-item nav-link" href="#">Contact</a>
+                </div>
+            </div>
+        </nav>
+    </div>
+
+    <div class="container" id="about">
+        <div class="row">
+            <div class="col-md-6">
+                <img id="code" src="assets/images/code.jpg">
+            </div>
+            <div class="col-md-6">
+                <p>Hello, my name is Roy Davis and I am an inspiring Web Developer/Software Engineer. I have worked in
+                    retail for over 20 years and have decided I want a new, rewarding career path. I have already
+                    obtained my A.S in Computer IT and I am now currently enrolled in the UCF coding bootcamp.</p>
+                <p>During my time working in retail, I have done many jobs. I have worked for Publix Supermarkets since
+                    1996. I started as a bagger while in highschool and eventually moved all the way up to a Department
+                    Manager position. I eventually realized that retail management was not in the best interest of my
+                    family or I so I decided it was time for a change.</p>
+                <p>Shortly after the birth of my third child, my wife and I decided it would be best if I pursued a
+                    college degree. It took almost 6 years, but I was finally able to earn my Associates in Computer IT
+                    in December of 2016. It was very rewarding to know that I stuck with it and was able to accomplish
+                    something I could be proud of.</p>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="container" id="projects">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card text-center bg-secondary" style="width: 18rem;">
+                    <img src="assets/images/psychic.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Psychic Game</h5>
+                        <a href="https://ryby1024.github.io/Psychic-Game/" class="btn btn-warning">Try Me</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card text-center bg-secondary" style="width: 18rem;">
+                    <img src="assets/images/avengers.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Avengers Defender</h5>
+                        <a href="https://ryby1024.github.io/Unit-4-Game/" class="btn btn-warning">Try Me</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card text-center bg-secondary" style="width: 18rem;">
+                    <img src="assets/images/bigbang.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Trivia Game</h5>
+                        <a href="https://ryby1024.github.io/TriviaGame/" class="btn btn-warning">Try Me</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card text-center bg-secondary" style="width: 18rem;">
+                    <img src="assets/images/giphy.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Giphy-Pull</h5>
+                        <a href="https://ryby1024.github.io/Giphy-Pull/" class="btn btn-warning">Try Me</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card text-center bg-secondary" style="width: 18rem;">
+                    <img src="assets/images/train.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Train Scheduler</h5>
+                        <a href="https://ryby1024.github.io/Train-Scheduler/" class="btn btn-warning">Try Me</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card text-center bg-secondary" style="width: 18rem;">
+                    <img src="assets/images/beer.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Brew Finder</h5>
+                        <a href="https://mc180g.github.io/BrewFinder/" class="btn btn-warning">Try Me</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script type="text/javascript" src="assets/javascript/app.js"></script>
+</body>
+
+</html>
