just need to finish the contact section before adding animations

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="#about">About <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#">Portfolio</a>
-                    <a class="nav-item nav-link" href="#">Contact</a>
+                    <a class="nav-item nav-link" href="#projects">Portfolio</a>
+                    <a class="nav-item nav-link" href="#contact-me">Contact</a>
                 </div>
             </div>
         </nav>
@@ -44,7 +44,7 @@
                 <p>Hello, my name is Roy Davis and I am an inspiring Web Developer/Software Engineer. I have worked in
                     retail for over 20 years and have decided I want a new, rewarding career path. I have already
                     obtained my A.S in Computer IT and I am now currently enrolled in the UCF coding bootcamp.</p>
-                <p>During my time working in retail, I have done many jobs. I have worked for Publix Supermarkets since
+                <p>During my time working in retail, I have been responsible for many jobs. I have worked for Publix Supermarkets since
                     1996. I started as a bagger while in highschool and eventually moved all the way up to a Department
                     Manager position. I eventually realized that retail management was not in the best interest of my
                     family or I so I decided it was time for a change.</p>
@@ -56,7 +56,13 @@
         </div>
 
     </div>
-
+    <div class="container" id="project-banner">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>Projects</h2>
+            </div>
+        </div>
+    </div>
     <div class="container" id="projects">
         <div class="row">
             <div class="col-md-4">
@@ -113,6 +119,22 @@
                         <h5 class="card-title">Brew Finder</h5>
                         <a href="https://mc180g.github.io/BrewFinder/" class="btn btn-warning">Try Me</a>
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container" id="contact-me">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Contact Me</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="assets/images/roy.jpg" id="Roy" alt="Roy">
                 </div>
             </div>
         </div>
