--- a/index.html
+++ b/index.html
@@ -131,13 +131,26 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container"id="contact-info">
             <div class="row">
                 <div class="col-md-6">
                     <img src="assets/images/roy.jpg" id="Roy" alt="Roy">
                 </div>
+                <div class="col-md-6">
+                    <h4>Let's Work Together!</h4><br>
+                    <p>A former Retail Manager turned Web and Software Developer, I am trained in project and people management as well have the technical skills needed to turn ideas into reality. I have developed my skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, AJax, JSON, as well as the usage of API's. With these skills as well as the skills I aquired while getting my A.S in Computer IT, I am equipped to take on almost any challenge that may present itself.</p>
+                    <p>If you want to take a look at my resume <a href="https://docs.google.com/document/d/1VIelLpeTdoYC_Ma-vcAzCdBT5g7KNPKWkjwnFw80dwQ/edit?usp=sharing" target="blank">click here</a>.</p>
+
+                    <p>You can contact me by:</p>
+                    <p><b>Email:</b> myroy1024@gmail.com</p>
+                    <p><b>Email:</b >myroy1024@yahoo.com</p>
+                    <p><b>Phone:</b> (407)-461-7433</p>
+
+                </div>
             </div>
         </div>
+        <footer>
+          </footer>
 
         <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
