--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -34,17 +35,45 @@
             </div>
         </nav>
     </div>
+    <div class="jumbotron">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/images/html.jpg" class="d-block w-100 img-fluid" alt="html">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/css.jpg" class="d-block w-100 img-fluid" alt="css">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/javascript.jpg" class="d-block w-100 img-fluid" alt="javascript">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/jquery.jpg" class="d-block w-100 img-fluid" alt="jquery">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+    </div>
 
     <div class="container" id="about">
         <div class="row">
             <div class="col-md-6">
                 <img id="code" src="assets/images/code.jpg">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="fade-left">
                 <p>Hello, my name is Roy Davis and I am an inspiring Web Developer/Software Engineer. I have worked in
                     retail for over 20 years and have decided I want a new, rewarding career path. I have already
                     obtained my A.S in Computer IT and I am now currently enrolled in the UCF coding bootcamp.</p>
-                <p>During my time working in retail, I have been responsible for many jobs. I have worked for Publix Supermarkets since
+                <p>During my time working in retail, I have been responsible for many jobs. I have worked for Publix
+                    Supermarkets since
                     1996. I started as a bagger while in highschool and eventually moved all the way up to a Department
                     Manager position. I eventually realized that retail management was not in the best interest of my
                     family or I so I decided it was time for a change.</p>
@@ -65,7 +94,7 @@
     </div>
     <div class="container" id="projects">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4"data-aos="flip-left">
                 <div class="card text-center bg-secondary" style="width: 18rem;">
                     <img src="assets/images/psychic.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -74,7 +103,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4"data-aos="flip-left">
                 <div class="card text-center bg-secondary" style="width: 18rem;">
                     <img src="assets/images/avengers.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -83,7 +112,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4"data-aos="flip-left">
                 <div class="card text-center bg-secondary" style="width: 18rem;">
                     <img src="assets/images/bigbang.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -94,7 +123,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4" data-aos="flip-right">
                 <div class="card text-center bg-secondary" style="width: 18rem;">
                     <img src="assets/images/giphy.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -103,7 +132,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4"data-aos="flip-right">
                 <div class="card text-center bg-secondary" style="width: 18rem;">
                     <img src="assets/images/train.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -112,7 +141,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4"data-aos="flip-right">
                 <div class="card text-center bg-secondary" style="width: 18rem;">
                     <img src="assets/images/beer.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -131,27 +160,33 @@
             </div>
         </div>
 
-        <div class="container"id="contact-info">
+        <div class="container" data-aos="zoom-in-down" id="contact-info">
             <div class="row">
                 <div class="col-md-6">
                     <img src="assets/images/roy.jpg" id="Roy" alt="Roy">
                 </div>
                 <div class="col-md-6">
                     <h4>Let's Work Together!</h4><br>
-                    <p>A former Retail Manager turned Web and Software Developer, I am trained in project and people management as well have the technical skills needed to turn ideas into reality. I have developed my skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, AJax, JSON, as well as the usage of API's. With these skills as well as the skills I aquired while getting my A.S in Computer IT, I am equipped to take on almost any challenge that may present itself.</p>
-                    <p>If you want to take a look at my resume <a href="https://docs.google.com/document/d/1VIelLpeTdoYC_Ma-vcAzCdBT5g7KNPKWkjwnFw80dwQ/edit?usp=sharing" target="blank">click here</a>.</p>
+                    <p>A former Retail Manager turned Web and Software Developer, I am trained in project and people
+                        management as well have the technical skills needed to turn ideas into reality. I have developed
+                        my skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, AJax, JSON, as well as the usage of
+                        API's. With these skills as well as the skills I aquired while getting my A.S in Computer IT, I
+                        am equipped to take on almost any challenge that may present itself.</p>
+                    <p>If you want to take a look at my resume <a
+                            href="https://docs.google.com/document/d/1VIelLpeTdoYC_Ma-vcAzCdBT5g7KNPKWkjwnFw80dwQ/edit?usp=sharing"
+                            target="blank">click here</a>.</p>
 
                     <p>You can contact me by:</p>
                     <p><b>Email:</b> myroy1024@gmail.com</p>
-                    <p><b>Email:</b >myroy1024@yahoo.com</p>
+                    <p><b>Email:</b>myroy1024@yahoo.com</p>
                     <p><b>Phone:</b> (407)-461-7433</p>
 
                 </div>
             </div>
         </div>
-        <footer>
-          </footer>
 
+
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 
