got the animations and responsiveness working

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 
     <div class="container" id="about">
         <div class="row">
-            <div class="col-md-6">
-                <img id="code" src="assets/images/code.jpg">
+            <div class="col-sm-6">
+                <img id="code" src="assets/images/code.jpg" class="img-fluid">
             </div>
-            <div class="col-md-6" data-aos="fade-left">
+            <div class="col-sm-6" data-aos="fade-left">
                 <p>Hello, my name is Roy Davis and I am an inspiring Web Developer/Software Engineer. I have worked in
                     retail for over 20 years and have decided I want a new, rewarding career path. I have already
                     obtained my A.S in Computer IT and I am now currently enrolled in the UCF coding bootcamp.</p>
@@ -87,66 +87,71 @@
     </div>
     <div class="container" id="project-banner">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-sm-12">
                 <h2>Projects</h2>
             </div>
         </div>
     </div>
     <div class="container" id="projects">
+
         <div class="row">
-            <div class="col-md-4"data-aos="flip-left">
-                <div class="card text-center bg-secondary" style="width: 18rem;">
-                    <img src="assets/images/psychic.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Psychic Game</h5>
-                        <a href="https://ryby1024.github.io/Psychic-Game/" class="btn btn-warning">Try Me</a>
+            <div class="card-deck">
+                <div class="col-sm-4" data-aos="flip-left">
+                    <div class="card text-center bg-secondary" >
+                        <img src="assets/images/psychic.jpg" class="card-img-top" class="img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Psychic Game</h5>
+                            <a href="https://ryby1024.github.io/Psychic-Game/" class="btn btn-warning">Try Me</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4"data-aos="flip-left">
-                <div class="card text-center bg-secondary" style="width: 18rem;">
-                    <img src="assets/images/avengers.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Avengers Defender</h5>
-                        <a href="https://ryby1024.github.io/Unit-4-Game/" class="btn btn-warning">Try Me</a>
+                <div class="col-sm-4" data-aos="flip-left">
+                    <div class="card text-center bg-secondary" >
+                        <img src="assets/images/avengers.jpg" class="card-img-top" class="img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Avengers Defender</h5>
+                            <a href="https://ryby1024.github.io/Unit-4-Game/" class="btn btn-warning">Try Me</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4"data-aos="flip-left">
-                <div class="card text-center bg-secondary" style="width: 18rem;">
-                    <img src="assets/images/bigbang.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Trivia Game</h5>
-                        <a href="https://ryby1024.github.io/TriviaGame/" class="btn btn-warning">Try Me</a>
+                <div class="col-sm-4" data-aos="flip-left">
+                    <div class="card text-center bg-secondary" >
+                        <img src="assets/images/bigbang.jpg" class="card-img-top" class="img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Trivia Game</h5>
+                            <a href="https://ryby1024.github.io/TriviaGame/" class="btn btn-warning">Try Me</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4" data-aos="flip-right">
-                <div class="card text-center bg-secondary" style="width: 18rem;">
-                    <img src="assets/images/giphy.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Giphy-Pull</h5>
-                        <a href="https://ryby1024.github.io/Giphy-Pull/" class="btn btn-warning">Try Me</a>
+            <div class="card-deck">
+                <div class="col-sm-4" data-aos="flip-right">
+                    <div class="card text-center bg-secondary" >
+                        <img src="assets/images/giphy.jpg" class="card-img-top" class="img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Giphy-Pull</h5>
+                            <a href="https://ryby1024.github.io/Giphy-Pull/" class="btn btn-warning">Try Me</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4"data-aos="flip-right">
-                <div class="card text-center bg-secondary" style="width: 18rem;">
-                    <img src="assets/images/train.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Train Scheduler</h5>
-                        <a href="https://ryby1024.github.io/Train-Scheduler/" class="btn btn-warning">Try Me</a>
+                <div class="col-sm-4" data-aos="flip-right">
+                    <div class="card text-center bg-secondary" >
+                        <img src="assets/images/train.jpg" class="card-img-top" class="img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Train Scheduler</h5>
+                            <a href="https://ryby1024.github.io/Train-Scheduler/" class="btn btn-warning">Try Me</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4"data-aos="flip-right">
-                <div class="card text-center bg-secondary" style="width: 18rem;">
-                    <img src="assets/images/beer.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Brew Finder</h5>
-                        <a href="https://mc180g.github.io/BrewFinder/" class="btn btn-warning">Try Me</a>
+                <div class="col-sm-4" data-aos="flip-right">
+                    <div class="card text-center bg-secondary" >
+                        <img src="assets/images/beer.jpg" class="card-img-top" class="img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Brew Finder</h5>
+                            <a href="https://mc180g.github.io/BrewFinder/" class="btn btn-warning">Try Me</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -154,7 +159,7 @@
 
         <div class="container" id="contact-me">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-sm-12">
                     <h2>Contact Me</h2>
                 </div>
             </div>
@@ -162,10 +167,10 @@
 
         <div class="container" data-aos="zoom-in-down" id="contact-info">
             <div class="row">
-                <div class="col-md-6">
-                    <img src="assets/images/roy.jpg" id="Roy" alt="Roy">
+                <div class="col-sm-6">
+                    <img src="assets/images/roy.jpg" class="img-fluid" id="Roy" alt="Roy">
                 </div>
-                <div class="col-md-6">
+                <div class="col-sm-6">
                     <h4>Let's Work Together!</h4><br>
                     <p>A former Retail Manager turned Web and Software Developer, I am trained in project and people
                         management as well have the technical skills needed to turn ideas into reality. I have developed
