got the animations and responsiveness all working

--- a/index.html
+++ b/index.html
@@ -35,20 +35,21 @@
             </div>
         </nav>
     </div>
-    <div class="jumbotron">
+    <div class="container" id="carousel-pics">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/images/html.jpg" class="d-block w-100 img-fluid" alt="html">
+                    <img src="assets/images/html.jpg" class="d-block w-100 img-fluid" id="carousel-img1" alt="html">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/css.jpg" class="d-block w-100 img-fluid" alt="css">
+                    <img src="assets/images/css.jpg" class="d-block w-100 img-fluid" id="carousel-img2" alt="css">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/javascript.jpg" class="d-block w-100 img-fluid" alt="javascript">
+                    <img src="assets/images/javascript.jpg" class="d-block w-100 img-fluid" id="carousel-img3"
+                        alt="javascript">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/jquery.jpg" class="d-block w-100 img-fluid" alt="jquery">
+                    <img src="assets/images/jquery.jpg" class="d-block w-100 img-fluid" id="carousel-img4" alt="jquery">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -61,7 +62,7 @@
             </a>
         </div>
     </div>
-    </div>
+
 
     <div class="container" id="about">
         <div class="row">
@@ -85,11 +86,9 @@
         </div>
 
     </div>
-    <div class="container" id="project-banner">
-        <div class="row">
-            <div class="col-sm-12">
-                <h2>Projects</h2>
-            </div>
+    <div class="container">
+        <div id="project-banner">
+            <h2>Projects</h2>
         </div>
     </div>
     <div class="container" id="projects">
@@ -97,7 +96,7 @@
         <div class="row">
             <div class="card-deck">
                 <div class="col-sm-4" data-aos="flip-left">
-                    <div class="card text-center bg-secondary" >
+                    <div class="card text-center bg-secondary">
                         <img src="assets/images/psychic.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Psychic Game</h5>
@@ -106,7 +105,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4" data-aos="flip-left">
-                    <div class="card text-center bg-secondary" >
+                    <div class="card text-center bg-secondary">
                         <img src="assets/images/avengers.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Avengers Defender</h5>
@@ -115,7 +114,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4" data-aos="flip-left">
-                    <div class="card text-center bg-secondary" >
+                    <div class="card text-center bg-secondary">
                         <img src="assets/images/bigbang.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Trivia Game</h5>
@@ -128,7 +127,7 @@
         <div class="row">
             <div class="card-deck">
                 <div class="col-sm-4" data-aos="flip-right">
-                    <div class="card text-center bg-secondary" >
+                    <div class="card text-center bg-secondary">
                         <img src="assets/images/giphy.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Giphy-Pull</h5>
@@ -137,7 +136,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4" data-aos="flip-right">
-                    <div class="card text-center bg-secondary" >
+                    <div class="card text-center bg-secondary">
                         <img src="assets/images/train.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Train Scheduler</h5>
@@ -146,7 +145,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4" data-aos="flip-right">
-                    <div class="card text-center bg-secondary" >
+                    <div class="card text-center bg-secondary">
                         <img src="assets/images/beer.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Brew Finder</h5>
@@ -156,12 +155,9 @@
                 </div>
             </div>
         </div>
-
-        <div class="container" id="contact-me">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h2>Contact Me</h2>
-                </div>
+        <div class="container">
+            <div id="contact-me">
+                <h2>Contact Me</h2>
             </div>
         </div>
 
