added the github repository to the project cards

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                         <img src="assets/images/psychic.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Psychic Game</h5>
-                            <a href="https://ryby1024.github.io/Psychic-Game/" class="btn btn-warning">Try Me</a>
+                            <a href="https://github.com/Ryby1024/Psychic-Game" target="blank" class="btn btn-warning">Learn More</a>
+                            <a href="https://ryby1024.github.io/Psychic-Game/" target="blank" class="btn btn-warning">Try Me</a>
                         </div>
                     </div>
                 </div>
@@ -109,7 +110,8 @@
                         <img src="assets/images/avengers.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Avengers Defender</h5>
-                            <a href="https://ryby1024.github.io/Unit-4-Game/" class="btn btn-warning">Try Me</a>
+                            <a href="https://github.com/Ryby1024/Unit-4-Game" target="blank" class="btn btn-warning">Learn More</a>
+                            <a href="https://ryby1024.github.io/Unit-4-Game/" target="blank" class="btn btn-warning">Try Me</a>
                         </div>
                     </div>
                 </div>
@@ -118,7 +120,8 @@
                         <img src="assets/images/bigbang.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Trivia Game</h5>
-                            <a href="https://ryby1024.github.io/TriviaGame/" class="btn btn-warning">Try Me</a>
+                            <a href="https://github.com/Ryby1024/TriviaGame" target="blank" class="btn btn-warning">Learn More</a>
+                            <a href="https://ryby1024.github.io/TriviaGame/" target="blank" class="btn btn-warning">Try Me</a>
                         </div>
                     </div>
                 </div>
@@ -131,7 +134,8 @@
                         <img src="assets/images/giphy.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Giphy-Pull</h5>
-                            <a href="https://ryby1024.github.io/Giphy-Pull/" class="btn btn-warning">Try Me</a>
+                            <a href="https://github.com/Ryby1024/Giphy-Pull" target="blank" class="btn btn-warning">Learn More</a>
+                            <a href="https://ryby1024.github.io/Giphy-Pull/" target="blank" class="btn btn-warning">Try Me</a>
                         </div>
                     </div>
                 </div>
@@ -140,7 +144,8 @@
                         <img src="assets/images/train.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Train Scheduler</h5>
-                            <a href="https://ryby1024.github.io/Train-Scheduler/" class="btn btn-warning">Try Me</a>
+                            <a href="https://github.com/Ryby1024/Train-Scheduler" target="blank" class="btn btn-warning">Learn More</a>
+                            <a href="https://ryby1024.github.io/Train-Scheduler/" target="blank" class="btn btn-warning">Try Me</a>
                         </div>
                     </div>
                 </div>
@@ -149,7 +154,8 @@
                         <img src="assets/images/beer.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Brew Finder</h5>
-                            <a href="https://mc180g.github.io/BrewFinder/" class="btn btn-warning">Try Me</a>
+                            <a href="https://github.com/MC180G/BrewFinder" target="blank" class="btn btn-warning">Learn More</a>
+                            <a href="https://mc180g.github.io/BrewFinder/" target="blank" class="btn btn-warning">Try Me</a>
                         </div>
                     </div>
                 </div>
@@ -173,8 +179,7 @@
                         my skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, AJax, JSON, as well as the usage of
                         API's. With these skills as well as the skills I aquired while getting my A.S in Computer IT, I
                         am equipped to take on almost any challenge that may present itself.</p>
-                    <p>If you want to take a look at my resume <a
-                            href="https://docs.google.com/document/d/1VIelLpeTdoYC_Ma-vcAzCdBT5g7KNPKWkjwnFw80dwQ/edit?usp=sharing"
+                    <p>If you want to take a look at my resume <a href="https://docs.google.com/document/d/1VIelLpeTdoYC_Ma-vcAzCdBT5g7KNPKWkjwnFw80dwQ/edit?usp=sharing"
                             target="blank">click here</a>.</p>
 
                     <p>You can contact me by:</p>
