working on making my navbar sticky to the top

--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
 <body>
 
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="navbar">
             <h1>Roy Davis</h1>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="#about">About <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#projects">Portfolio</a>
-                    <a class="nav-item nav-link" href="#contact-me">Contact</a>
+                    <ul>
+                    <li><a class="nav-item nav-link active" href="#about">About <span class="sr-only">(current)</span></a></li>
+                    <li><a class="nav-item nav-link" href="#projects">Portfolio</a></li>
+                    <li><a class="nav-item nav-link" href="#contact-me">Contact</a></li>
+                    </ul>
                 </div>
             </div>
         </nav>
