may have fixed the sticky navbar

--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="navbar">
             <h1>Roy Davis</h1>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
                 <div class="navbar-nav">
-                    <ul>
-                    <li><a class="nav-item nav-link active" href="#about">About <span class="sr-only">(current)</span></a></li>
-                    <li><a class="nav-item nav-link" href="#projects">Portfolio</a></li>
-                    <li><a class="nav-item nav-link" href="#contact-me">Contact</a></li>
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-item nav-link active" href="#about">About <span
+                                    class="sr-only">(current)</span></a></li>
+                        <li class="nav-item"><a class="nav-item nav-link" href="#projects">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-item nav-link" href="#contact-me">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -102,8 +106,10 @@
                         <img src="assets/images/psychic.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Psychic Game</h5>
-                            <a href="https://github.com/Ryby1024/Psychic-Game" target="blank" class="btn btn-warning">Learn More</a>
-                            <a href="https://ryby1024.github.io/Psychic-Game/" target="blank" class="btn btn-warning">Try Me</a>
+                            <a href="https://github.com/Ryby1024/Psychic-Game" target="blank"
+                                class="btn btn-warning">Learn More</a>
+                            <a href="https://ryby1024.github.io/Psychic-Game/" target="blank"
+                                class="btn btn-warning">Try Me</a>
                         </div>
                     </div>
                 </div>
@@ -112,8 +118,10 @@
                         <img src="assets/images/avengers.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Avengers Defender</h5>
-                            <a href="https://github.com/Ryby1024/Unit-4-Game" target="blank" class="btn btn-warning">Learn More</a>
-                            <a href="https://ryby1024.github.io/Unit-4-Game/" target="blank" class="btn btn-warning">Try Me</a>
+                            <a href="https://github.com/Ryby1024/Unit-4-Game" target="blank"
+                                class="btn btn-warning">Learn More</a>
+                            <a href="https://ryby1024.github.io/Unit-4-Game/" target="blank" class="btn btn-warning">Try
+                                Me</a>
                         </div>
                     </div>
                 </div>
@@ -122,8 +130,10 @@
                         <img src="assets/images/bigbang.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Trivia Game</h5>
-                            <a href="https://github.com/Ryby1024/TriviaGame" target="blank" class="btn btn-warning">Learn More</a>
-                            <a href="https://ryby1024.github.io/TriviaGame/" target="blank" class="btn btn-warning">Try Me</a>
+                            <a href="https://github.com/Ryby1024/TriviaGame" target="blank"
+                                class="btn btn-warning">Learn More</a>
+                            <a href="https://ryby1024.github.io/TriviaGame/" target="blank" class="btn btn-warning">Try
+                                Me</a>
                         </div>
                     </div>
                 </div>
@@ -136,8 +146,10 @@
                         <img src="assets/images/giphy.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Giphy-Pull</h5>
-                            <a href="https://github.com/Ryby1024/Giphy-Pull" target="blank" class="btn btn-warning">Learn More</a>
-                            <a href="https://ryby1024.github.io/Giphy-Pull/" target="blank" class="btn btn-warning">Try Me</a>
+                            <a href="https://github.com/Ryby1024/Giphy-Pull" target="blank"
+                                class="btn btn-warning">Learn More</a>
+                            <a href="https://ryby1024.github.io/Giphy-Pull/" target="blank" class="btn btn-warning">Try
+                                Me</a>
                         </div>
                     </div>
                 </div>
@@ -146,8 +158,10 @@
                         <img src="assets/images/train.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Train Scheduler</h5>
-                            <a href="https://github.com/Ryby1024/Train-Scheduler" target="blank" class="btn btn-warning">Learn More</a>
-                            <a href="https://ryby1024.github.io/Train-Scheduler/" target="blank" class="btn btn-warning">Try Me</a>
+                            <a href="https://github.com/Ryby1024/Train-Scheduler" target="blank"
+                                class="btn btn-warning">Learn More</a>
+                            <a href="https://ryby1024.github.io/Train-Scheduler/" target="blank"
+                                class="btn btn-warning">Try Me</a>
                         </div>
                     </div>
                 </div>
@@ -156,8 +170,10 @@
                         <img src="assets/images/beer.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Brew Finder</h5>
-                            <a href="https://github.com/MC180G/BrewFinder" target="blank" class="btn btn-warning">Learn More</a>
-                            <a href="https://mc180g.github.io/BrewFinder/" target="blank" class="btn btn-warning">Try Me</a>
+                            <a href="https://github.com/MC180G/BrewFinder" target="blank" class="btn btn-warning">Learn
+                                More</a>
+                            <a href="https://mc180g.github.io/BrewFinder/" target="blank" class="btn btn-warning">Try
+                                Me</a>
                         </div>
                     </div>
                 </div>
@@ -181,7 +197,8 @@
                         my skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, AJax, JSON, as well as the usage of
                         API's. With these skills as well as the skills I aquired while getting my A.S in Computer IT, I
                         am equipped to take on almost any challenge that may present itself.</p>
-                    <p>If you want to take a look at my resume <a href="https://docs.google.com/document/d/1VIelLpeTdoYC_Ma-vcAzCdBT5g7KNPKWkjwnFw80dwQ/edit?usp=sharing"
+                    <p>If you want to take a look at my resume <a
+                            href="https://docs.google.com/document/d/1VIelLpeTdoYC_Ma-vcAzCdBT5g7KNPKWkjwnFw80dwQ/edit?usp=sharing"
                             target="blank">click here</a>.</p>
 
                     <p>You can contact me by:</p>
