--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <div class="col-sm-6">
                     <h4>Let's Work Together!</h4><br>
                     <p>A former Retail Manager turned Web and Software Developer, I am trained in project and people
-                        management as well have the technical skills needed to turn ideas into reality. I have developed
+                        management as well have the technical skills needed to turn ideas into reality.</p> <p>I have developed
                         my skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, AJax, JSON, as well as the usage of
                         API's. With these skills as well as the skills I aquired while getting my A.S in Computer IT, I
                         am equipped to take on almost any challenge that may present itself.</p>
@@ -201,14 +201,19 @@
                             href="https://docs.google.com/document/d/1VIelLpeTdoYC_Ma-vcAzCdBT5g7KNPKWkjwnFw80dwQ/edit?usp=sharing"
                             target="blank">click here</a>.</p>
 
-                    <p>You can contact me by:</p>
-                    <p><b>Email:</b> myroy1024@gmail.com</p>
-                    <p><b>Email:</b>myroy1024@yahoo.com</p>
-                    <p><b>Phone:</b> (407)-461-7433</p>
 
                 </div>
             </div>
         </div>
+        <footer id="footer">
+
+            <p>You can contact me by:</p>
+            <p><b>Email:</b> myroy1024@gmail.com</p>
+            <p><b>Email:</b>myroy1024@yahoo.com</p>
+            <p><b>Phone:</b> (407)-461-7433</p>
+            <p><b>© 2019 Copyright:</b></p>
+
+        </footer>
 
 
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
