--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/images/html.jpg" class="d-block w-100 img-fluid" id="carousel-img1" alt="html">
+                    <img src="assets/images/html.jpg" class="d-block w-100 img-fluid" id="carousel-img1" alt="responsive">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/css.jpg" class="d-block w-100 img-fluid" id="carousel-img2" alt="css">
+                    <img src="assets/images/programmer.jpg" class="d-block w-100 img-fluid" id="carousel-img2" alt="responsive">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/javascript.jpg" class="d-block w-100 img-fluid" id="carousel-img3"
+                    <img src="assets/images/javascript.jpg" class="d-block w-100 img-fluid" id="responsive3"
                         alt="javascript">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/jquery.jpg" class="d-block w-100 img-fluid" id="carousel-img4" alt="jquery">
+                    <img src="assets/images/jquery.jpg" class="d-block w-100 img-fluid" id="carousel-img4" alt="responsive">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
