--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         alt="javascript">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/jquery.jpg" class="d-block w-100 img-fluid" id="carousel-img4" alt="responsive">
+                    <img src="assets/images/graphic (1).jpg" class="d-block w-100 img-fluid" id="carousel-img4" alt="responsive">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -207,7 +207,7 @@
         </div>
         <footer id="footer">
 
-            <p>You can contact me by:</p>
+            <p><b>You can contact me by:</b></p>
             <p><b>Email:</b> myroy1024@gmail.com</p>
             <p><b>Email:</b>myroy1024@yahoo.com</p>
             <p><b>Phone:</b> (407)-461-7433</p>
