--- a/index.html
+++ b/index.html
@@ -45,17 +45,20 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/images/html.jpg" class="d-block w-100 img-fluid" id="carousel-img1" alt="responsive">
+                    <img src="assets/images/html.jpg" class="d-block w-100 img-fluid" id="carousel-img1"
+                        alt="responsive">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/programmer.jpg" class="d-block w-100 img-fluid" id="carousel-img2" alt="responsive">
+                    <img src="assets/images/programmer.jpg" class="d-block w-100 img-fluid" id="carousel-img2"
+                        alt="responsive">
                 </div>
                 <div class="carousel-item">
                     <img src="assets/images/javascript.jpg" class="d-block w-100 img-fluid" id="responsive3"
                         alt="javascript">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/graphic (1).jpg" class="d-block w-100 img-fluid" id="carousel-img4" alt="responsive">
+                    <img src="assets/images/graphic (1).jpg" class="d-block w-100 img-fluid" id="carousel-img4"
+                        alt="responsive">
                 </div>
             </div>
 
@@ -172,6 +175,23 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="card-deck">
+                <div class="col-sm" data-aos="flip-right">
+                    <div class="card text-center bg-secondary">
+                        <img src="assets/images/liri.jpg" class="card-img-top" class="img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Liri Bot</h5>
+                            <a href="https://github.com/Ryby1024/liri-node-app" target="blank"
+                                class="btn btn-warning">Learn
+                                More</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
         <div class="container">
             <div id="contact-me">
                 <h2>Contact Me</h2>
@@ -186,9 +206,11 @@
                 <div class="col-sm-6">
                     <h4>Let's Work Together!</h4><br>
                     <p>A former Retail Manager turned Web and Software Developer, I am trained in project and people
-                        management as well have the technical skills needed to turn ideas into reality.</p> <p>I have developed
+                        management as well have the technical skills needed to turn ideas into reality.</p>
+                    <p>I have developed
                         my skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, AJax, JSON, as well as the usage of
-                        API's. With these skills as well as the skills I aquired while getting my A.S in Computer IT, I
+                        API's. With these skills as well as the skills I aquired while getting my A.S in Computer
+                        IT, I
                         am equipped to take on almost any challenge that may present itself.</p>
                     <p>If you want to take a look at my resume <a
                             href="https://docs.google.com/document/d/1VIelLpeTdoYC_Ma-vcAzCdBT5g7KNPKWkjwnFw80dwQ/edit?usp=sharing"
