added the bamazon app

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
         <div class="row">
             <div class="card-deck">
-                <div class="col-sm" data-aos="flip-right">
+                <div class="col-sm-6" data-aos="flip-right">
                     <div class="card text-center bg-secondary">
                         <img src="assets/images/liri.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
@@ -188,6 +188,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-6" data-aos="flip-right">
+                    <div class="card text-center bg-secondary">
+                        <img src="assets/images/bamazon.jpg" class="card-img-top" class="img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Bamazon</h5>
+                            <a href="https://github.com/Ryby1024/node-mysql" target="blank" class="btn btn-warning">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+
 
             </div>
 
