added project two to the portfolio

--- a/index.html
+++ b/index.html
@@ -224,6 +224,18 @@
                     </div>
                 </div>
             </div>
+            <div class="card-deck">
+                <div class="col-sm" data-aos="flip-left">
+                    <div class="card text-center bg-secondary">
+                        <img src="assets/images/gift.jpg" class="card-img-top" class="img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">UnWrapped</h5>
+                            <a href="https://github.com/sengland88/unWrapped" target="blank" class="btn btn-warning">Learn More</a>
+                            <a href="https://dashboard.heroku.com/apps/unwrappedgifts" target="blank" class="btn btn-warning">Try Me</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="container">
             <div id="contact-me">
@@ -257,7 +269,7 @@
 
             <p><b>You can contact me by:</b></p>
             <p><b>Email:</b> myroy1024@gmail.com</p>
-            <p><b>Email:</b>myroy1024@yahoo.com</p>
+            <p><b>Email:</b> myroy1024@yahoo.com</p>
             <p><b>Phone:</b> (407)-461-7433</p>
             <p><b>© 2019 Copyright:</b></p>
 
