--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="navbar">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top" id="navbar">
             <h1>Roy Davis</h1>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -103,9 +103,9 @@
                         <div class="card-body">
                             <h5 class="card-title">Psychic Game</h5>
                             <a href="https://github.com/Ryby1024/Psychic-Game" target="blank"
-                                class="btn btn-warning">Learn More</a>
+                                class="btn btn-primary">Learn More</a>
                             <a href="https://ryby1024.github.io/Psychic-Game/" target="blank"
-                                class="btn btn-warning">Try Me</a>
+                                class="btn btn-primary">Try Me</a>
                         </div>
                     </div>
                 </div>
@@ -115,8 +115,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Avengers Defender</h5>
                             <a href="https://github.com/Ryby1024/Unit-4-Game" target="blank"
-                                class="btn btn-warning">Learn More</a>
-                            <a href="https://ryby1024.github.io/Unit-4-Game/" target="blank" class="btn btn-warning">Try
+                                class="btn btn-primary">Learn More</a>
+                            <a href="https://ryby1024.github.io/Unit-4-Game/" target="blank" class="btn btn-primary">Try
                                 Me</a>
                         </div>
                     </div>
@@ -127,8 +127,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Trivia Game</h5>
                             <a href="https://github.com/Ryby1024/TriviaGame" target="blank"
-                                class="btn btn-warning">Learn More</a>
-                            <a href="https://ryby1024.github.io/TriviaGame/" target="blank" class="btn btn-warning">Try
+                                class="btn btn-primary">Learn More</a>
+                            <a href="https://ryby1024.github.io/TriviaGame/" target="blank" class="btn btn-primary">Try
                                 Me</a>
                         </div>
                     </div>
@@ -143,8 +143,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Giphy-Pull</h5>
                             <a href="https://github.com/Ryby1024/Giphy-Pull" target="blank"
-                                class="btn btn-warning">Learn More</a>
-                            <a href="https://ryby1024.github.io/Giphy-Pull/" target="blank" class="btn btn-warning">Try
+                                class="btn btn-primary">Learn More</a>
+                            <a href="https://ryby1024.github.io/Giphy-Pull/" target="blank" class="btn btn-primary">Try
                                 Me</a>
                         </div>
                     </div>
@@ -155,9 +155,9 @@
                         <div class="card-body">
                             <h5 class="card-title">Train Scheduler</h5>
                             <a href="https://github.com/Ryby1024/Train-Scheduler" target="blank"
-                                class="btn btn-warning">Learn More</a>
+                                class="btn btn-primary">Learn More</a>
                             <a href="https://ryby1024.github.io/Train-Scheduler/" target="blank"
-                                class="btn btn-warning">Try Me</a>
+                                class="btn btn-primary">Try Me</a>
                         </div>
                     </div>
                 </div>
@@ -166,9 +166,9 @@
                         <img src="assets/images/beer.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Brew Finder</h5>
-                            <a href="https://github.com/MC180G/BrewFinder" target="blank" class="btn btn-warning">Learn
+                            <a href="https://github.com/MC180G/BrewFinder" target="blank" class="btn btn-primary">Learn
                                 More</a>
-                            <a href="https://mc180g.github.io/BrewFinder/" target="blank" class="btn btn-warning">Try
+                            <a href="https://mc180g.github.io/BrewFinder/" target="blank" class="btn btn-primary">Try
                                 Me</a>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Liri Bot</h5>
                             <a href="https://github.com/Ryby1024/liri-node-app" target="blank"
-                                class="btn btn-warning">Learn
+                                class="btn btn-primary">Learn
                                 More</a>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                         <img src="assets/images/bamazon.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Bamazon</h5>
-                            <a href="https://github.com/Ryby1024/node-mysql" target="blank" class="btn btn-warning">Learn More</a>
+                            <a href="https://github.com/Ryby1024/node-mysql" target="blank" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -203,8 +203,8 @@
                         <img src="assets/images/love.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Friend Finder</h5>
-                            <a href="https://github.com/Ryby1024/Friend-Finder" target="blank" class="btn btn-warning">Learn More</a>
-                            <a href="https://arcane-journey-78495.herokuapp.com/" target="blank" class="btn btn-warning">Try Me</a>
+                            <a href="https://github.com/Ryby1024/Friend-Finder" target="blank" class="btn btn-primary">Learn More</a>
+                            <a href="https://arcane-journey-78495.herokuapp.com/" target="blank" class="btn btn-primary">Try Me</a>
                         </div>
                     </div>
                 </div>
@@ -218,8 +218,8 @@
                         <img src="assets/images/burger.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Burger Order</h5>
-                            <a href="https://github.com/Ryby1024/burger" target="blank" class="btn btn-warning">Learn More</a>
-                            <a href="https://sleepy-spire-88994.herokuapp.com/" target="blank" class="btn btn-warning">Try Me</a>
+                            <a href="https://github.com/Ryby1024/burger" target="blank" class="btn btn-primary">Learn More</a>
+                            <a href="https://sleepy-spire-88994.herokuapp.com/" target="blank" class="btn btn-primary">Try Me</a>
                         </div>
                     </div>
                 </div>
@@ -230,8 +230,8 @@
                         <img src="assets/images/gift.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">UnWrapped</h5>
-                            <a href="https://github.com/sengland88/unWrapped" target="blank" class="btn btn-warning">Learn More</a>
-                            <a href="https://dashboard.heroku.com/apps/unwrappedgifts" target="blank" class="btn btn-warning">Try Me</a>
+                            <a href="https://github.com/sengland88/unWrapped" target="blank" class="btn btn-primary">Learn More</a>
+                            <a href="https://dashboard.heroku.com/apps/unwrappedgifts" target="blank" class="btn btn-primary">Try Me</a>
                         </div>
                     </div>
                 </div>
@@ -246,7 +246,7 @@
         <div class="container" data-aos="zoom-in-down" id="contact-info">
             <div class="row">
                 <div class="col-sm-6">
-                    <img src="assets/images/roy.jpg" class="img-fluid" id="Roy" alt="Roy">
+                    <img src="assets/images/roy1.jpg" class="img-fluid" id="Roy" alt="Roy">
                 </div>
                 <div class="col-sm-6">
                     <h4>Let's Work Together!</h4><br>
