Added to about me

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     <p>A former Retail Manager turned Web and Software Developer, I am trained in project and people
                         management as well have the technical skills needed to turn ideas into reality.</p>
                     <p>I have developed
-                        my skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, AJax, JSON, as well as the usage of
+                        my skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, AJax, JSON, Node.js, Express.js, Mysql, Mongo DB as well as the usage of
                         API's. With these skills as well as the skills I aquired while getting my A.S in Computer
                         IT, I
                         am equipped to take on almost any challenge that may present itself.</p>
